First version to show

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,4 @@
+@import "_variables.scss";
 @import "theme/vendor/bootstrap.scss";
 @import "theme/vendor/font-awesome.scss";
 @import "theme/vendor/owl.carousel.scss";
@@ -6,4 +7,5 @@
 @import "theme/style.scss";
 @import "theme/responsive.scss";
 @import "theme/switcher.scss";
-@import "theme/style1.scss";
+@import "theme/color.scss";
+@import "icons.scss";
