--- a/assets/scss/theme/color.scss
+++ b/assets/scss/theme/color.scss
@@ -1,31 +1,31 @@
 #style-switcher h2 a {
-    background: #ff6b6b none repeat scroll 0 0
+    background: $pcolor none repeat scroll 0 0
 }
 
 
 .tour-info ul li i, .tour-places .owl-theme .owl-controls .owl-page span, .testimonial-area .owl-theme .owl-controls .owl-page span, .scrollup {
-	background: #ff6b6b;
+	background: $pcolor;
 }
 
 a.slide-btn, .call-to-area-text a, .single-service:hover .service-icon i, .single-contact:hover .contact-icon i, .contact-form input[type="submit"] {
-	border: 1px solid #ff6b6b;
-	background: #ff6b6b;
+	border: 1px solid $pcolor;
+	background: $pcolor;
 }
 
 a.slide-btn:hover, .call-to-area-text a, .contact-form input[type="submit"]:hover{
-	border: 1px solid #ff6b6b;
+	border: 1px solid $pcolor;
 }
 
 
 .service-icon i, .contact-icon i  {
-	color: #ff6b6b;
-	border: 1px solid #ff6b6b;
+	color: $pcolor;
+	border: 1px solid $pcolor;
 }
 
 .footer-menu ul li {
-	border-right: 1px solid #ff6b6b;
+	border-right: 1px solid $pcolor;
 }
 
 .footer-menu ul li a:hover {
-	color: #ff6b6b;
+	color: $pcolor;
 }
