--- a/assets/scss/theme/style.scss
+++ b/assets/scss/theme/style.scss
@@ -114,7 +114,6 @@ fieldset {
 .section-title h2 {
     font-size: 40px;
     margin: 0;
-    text-transform: capitalize;
 }
 
 a.read-more {
@@ -152,6 +151,14 @@ a.read-more:hover {
     display: none;
     z-index: 2;
     background: #73AE20;
+    box-shadow: 0 3px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+}
+.scrollup.scrollup-phone {
+    bottom: 30px;
+    height: 60px;
+    width: 60px;
+    line-height: 60px;
+    font-size: 30px;
 }
 
 .scrollup:hover {
@@ -265,9 +272,10 @@ a.read-more:hover {
 .welcome-image-area {
     position: relative;
     height: 100%;
-    background: url(../images/bg/mainbg.jpg);
+    background: url(../images/bg/hameau-champetre-2.jpg);
     background-size: cover;
     z-index: 1;
+    background-position: bottom center
 }
 
 .welcome-image-area:after {
@@ -296,9 +304,9 @@ a.read-more:hover {
     margin-top: 60px;
 }
 
-.header-text h2 {
+.header-text h1 {
     color: #fff;
-    font-size: 130px;
+    font-size: 80px;
     margin-top: 10px;
     text-transform: capitalize;
 }
@@ -313,13 +321,14 @@ a.read-more:hover {
 
 .tour-info {
     text-align: right;
-    padding-top: 25px;
+    padding-top: 10px;
     -webkit-transition: all 0.4s ease-out;
     transition: all 0.4s ease-out;
+    line-height: 56px;
 }
 
 .menu-bg .tour-info {
-    padding-top: 18px;
+    padding-top: 5px;
     -webkit-transition: all 0.4s ease-out;
     transition: all 0.4s ease-out;
 }
@@ -335,7 +344,6 @@ a.read-more:hover {
     color: #fff;
     font-size: 14px;
     font-weight: 300;
-    margin-left: 20px;
     text-transform: capitalize;
 }
 
@@ -360,7 +368,7 @@ a.read-more:hover {
 }
 
 .logo {
-    padding-top: 25px;
+    padding-top: 10px;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
@@ -382,9 +390,10 @@ a.read-more:hover {
 }
 
 .menu-bg .logo {
-    padding-top: 16px;
+    padding-top: 5px;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
+    padding-bottom: 9px;
 }
 
 .menu-bg .logo a p {
@@ -724,17 +733,32 @@ a.slide-btn:hover {
 .single-service h4 {
     font-size: 18px;
     margin-top: 20px;
-    text-transform: capitalize;
     font-weight: 600;
     -webkit-transition: .3s;
     transition: .3s;
+    &:after {
+        transition: all 0.4s;
+        -webkit-transition: all 0.4s;
+        -moz-transition: all 0.4s;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        content: " ";
+        height: 0;
+        width: 0;
+        border-top: 1px solid #fff;
+        margin-top: 15px;
+    }
 }
 
 .single-service:hover.single-service h4 {
-    color: #000;
+    color: #fff;
     font-weight: 700;
     -webkit-transition: .3s;
     transition: .3s;
+    &:after {
+        width: 60px;
+    }
 }
 
 .service-icon i {
@@ -771,23 +795,23 @@ a.slide-btn:hover {
 */
 
 .call-to-area {
-    background: url(../images/bg/call.jpg);
-    background-size: cover;
-    padding: 150px 0px;
+    background: $pcolor;
+    padding: 80px 0px;
     position: relative;
     z-index: 1;
+    color: #fff;
 }
 
-.call-to-area:after {
-    position: absolute;
-    background: rgba(0, 0, 0, .6);
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    content: "";
-    z-index: -1;
-}
+// .call-to-area:after {
+//     position: absolute;
+//     background: rgba(0, 0, 0, .6);
+//     left: 0;
+//     top: 0;
+//     width: 100%;
+//     height: 100%;
+//     content: "";
+//     z-index: -1;
+// }
 
 .call-to-area-text h2 {
     color: #fff;
@@ -922,7 +946,6 @@ a.slide-btn:hover {
 }
 
 .contact-icon {
-    float: left;
     margin-bottom: 30px;
     margin-right: 15px;
 }
@@ -949,15 +972,18 @@ a.slide-btn:hover {
     background: #73AE20;
 }
 
-.single-contact {}
+.single-contact .contact-icon {
+    display: inline-block;
+}
 
-.single-contact h2 {
+.single-contact h5 {
     font-size: 18px;
     margin-top: 20px;
     text-transform: capitalize;
     font-weight: 600;
     -webkit-transition: .3s;
     transition: .3s;
+    display: inline-block;
 }
 
 .contact-form {
@@ -1049,15 +1075,20 @@ a.slide-btn:hover {
 
 .footer-area {
     background: #000;
-    padding: 120px 0px;
+    padding: 60px 0px;
 }
 
 .footer-text h6 {
-    text-transform: capitalize;
     color: #fff;
     line-height: 25px;
     font-weight: 300;
     font-size: 16px;
+}
+.footer-text a {
+    color: $pcolor;
+}
+.footer-text i {
+    margin: 0 7px;
 }
 
 .footer-menu {
