--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,8 @@
 @import "_variables.scss";
 @import "theme/vendor/bootstrap.scss";
 @import "theme/vendor/font-awesome.scss";
-@import "theme/vendor/owl.carousel.scss";
-@import "theme/vendor/owl.theme.scss";
+@import "theme/vendor/owl.carousel.2.scss";
+@import "theme/vendor/owl.theme.default.scss";
 @import "theme/animate.min.scss";
 @import "theme/style.scss";
 @import "theme/responsive.scss";
