Added phone number

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -395,9 +395,11 @@
 
     <!-- START SCROOL UP DESIGN AREA -->
     <div class="">
-        <div class="scrollup scrollup-phone">
-            <i class="fa fa-phone"></i>
-        </div>
+        <a href="tel:+14504735042" style="color: white">
+            <div class="scrollup scrollup-phone">
+                <i class="fa fa-phone"></i>
+            </div>
+        </a>
     </div>
     <div class="scroll-to-up">
         <div class="scrollup">
